메인화면 마크업 및 정보등록 마크업,구현하는중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,3 +2,6 @@
 
 .sign-up-box {width:650px; background-color:#ebebeb; margin-top:20px; box-shadow:5px 5px 5px 5px #BDC0C0;}
 .sign-up-subject {margin:20px; font-weight:bold;}
+.mainimg{width: 150px; height: 200px;}
+.maincontent{width: 350px; }
+.maincontent2{height: 50px;}
